test/asm/macro-arg-recursion.err
error: macro-arg-recursion.asm(6) -> macro-arg-recursion.asm::m(2):
    Invalid character after line continuation '2'
Assembly aborted with 1 error!
